[gd_scene load_steps=8 format=2]

[ext_resource path="res://BackGround.tscn" type="PackedScene" id=1]
[ext_resource path="res://Character.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Spawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://World.gd" type="Script" id=5]
[ext_resource path="res://Menus.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/flappymenu.wav" type="AudioStream" id=7]

[node name="World" type="Node2D"]
script = ExtResource( 5 )

[node name="Menus" parent="." instance=ExtResource( 6 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
z_index = 7
gravity_scale = 0.0
can_sleep = false

[node name="BackGround" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D2" parent="BackGround/DeathZone" index="0"]
position = Vector2( 956.486, 1188.49 )

[node name="CollisionShape2D2" parent="BackGround" index="17"]
position = Vector2( 968.009, -45.3846 )

[node name="Spawner" parent="." instance=ExtResource( 4 )]
position = Vector2( 1930, -200 )
z_index = 6

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="start_game" from="Menus" to="." method="_on_Menus_start_game"]
[connection signal="died" from="Player" to="." method="_on_Player_died"]
[connection signal="body_entered" from="BackGround/DeathZone" to="." method="_on_DeathZone_body_entered"]

[editable path="BackGround"]
